# Boost.Asio-Playground

./: .gitignore  CMakeLists.txt  Hybrid  Hybrid.cpp  README.md  client  client.cpp  server  server.cpp  testServer.cpp
.cache/clangd/index/: client.cpp.61228D7D344F0DDD.idx  server.cpp.AB09C2CCA4216931.idx
.github/workflows/: cmake-multi-platform.yml
Boost/lib/cmake/boost_atomic-1.85.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw13-mt-s-x32-1_85-static.cmake  libboost_atomic-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_atomic-variant-mgw13-mt-sd-x32-1_85-static.cmake  libboost_atomic-variant-mgw13-mt-sd-x64-1_85-static.cmake
Boost/lib/cmake/boost_charconv-1.85.0/: boost_charconv-config.cmake  libboost_charconv-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_charconv-variant-mgw13-mt-sd-x64-1_85-static.cmake
Boost/lib/cmake/boost_chrono-1.85.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw13-mt-s-x32-1_85-static.cmake  libboost_chrono-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_chrono-variant-mgw13-mt-sd-x32-1_85-static.cmake  libboost_chrono-variant-mgw13-mt-sd-x64-1_85-static.cmake
Boost/lib/cmake/boost_container-1.85.0/: boost_container-config.cmake  libboost_container-variant-mgw13-mt-s-x32-1_85-static.cmake  libboost_container-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_container-variant-mgw13-mt-sd-x32-1_85-static.cmake  libboost_container-variant-mgw13-mt-sd-x64-1_85-static.cmake
Boost/lib/cmake/boost_context-1.85.0/: boost_context-config.cmake  libboost_context-variant-mgw13-mt-s-x32-1_85-static.cmake  libboost_context-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_context-variant-mgw13-mt-sd-x32-1_85-static.cmake  libboost_context-variant-mgw13-mt-sd-x64-1_85-static.cmake
Boost/lib/cmake/boost_contract-1.85.0/: boost_contract-config.cmake  libboost_contract-variant-mgw13-mt-s-x32-1_85-static.cmake  libboost_contract-variant-mgw13-mt-s-x64-1_85-static.cmake  libboost_contract-variant-mgw13-mt-sd-x32-1_85-static.cmake  (+1 more)
include/: get_ip.h  includes.h
(+183 files in other folders)
